--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,10 @@ insert_final_newline = true
 indent_style = space
 indent_size = 2
 
-[*.json]
+[*.json, .prettierrc, .eslintrc]
+indent_style = space
+indent_size = 2
+
+[*.graphql, *.gql]
 indent_style = space
 indent_size = 2
