--- a/package.json
+++ b/package.json
@@ -7,6 +7,25 @@
     "shared-libs/*"
   ],
   "devDependencies": {
-    "husky": "^0.14.3"
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-problems": "^0.1.1",
+    "eslint-plugin-flowtype": "^2.48.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.8.2",
+    "husky": "^1.0.0-rc.8",
+    "prettier": "^1.13.3",
+    "prettier-eslint": "^8.8.1",
+    "pretty-quick": "^1.6.0"
+  },
+  "scripts": {
+    "test": "echo \"Hello\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
