--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "indocal",
   "private": true,
-  "workspaces": [
-    "indocal-api",
-    "indocal-client",
-    "shared-libs/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "indocal-api",
+      "indocal-client",
+      "shared-libs/*"
+    ],
+    "nohoist": [
+      "**/react-native/**",
+      "**/react-native",
+      "**/react-native-scripts",
+      "**/react-native-scripts/**",
+      "**/react-native-code-push/**",
+      "**/react-native-code-push"
+    ]
+  },
   "devDependencies": {
+    "appcenter-cli": "^1.0.17",
     "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
@@ -21,6 +32,7 @@
     "pretty-quick": "^1.6.0"
   },
   "scripts": {
+    "appcenter": "appcenter",
     "test": "echo \"Hello\""
   },
   "husky": {
