--- a/indocal-client/package.json
+++ b/indocal-client/package.json
@@ -27,15 +27,20 @@
   },
   "dependencies": {
     "apollo-client": "^2.3.2",
-    "dotenv": "^5.0.1",
+    "body-parser": "^1.18.3",
+    "dotenv-loader": "^2.0.1",
     "express": "^4.16.3",
+    "express-no-favicons": "^0.0.1",
     "graphql": "^0.13.2",
+    "helmet": "^3.12.1",
     "history": "^4.7.2",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
+    "react-art": "16",
     "react-dom": "16.3.1",
     "react-native": "0.55.4",
     "react-native-code-push": "^5.3.4",
+    "react-native-web": "^0.7.3",
     "react-redux": "^5.0.7",
     "react-universal-component": "^2.9.0",
     "redux": "^4.0.0",
@@ -43,17 +48,45 @@
     "redux-first-router-link": "^1.4.2"
   },
   "devDependencies": {
+    "autodll-webpack-plugin": "^0.3.9",
     "babel-core": "6",
     "babel-jest": "23.0.1",
     "babel-loader": "^7.1.4",
+    "babel-plugin-minify-dead-code-elimination": "^0.4.3",
+    "babel-plugin-minify-mangle-names": "^0.4.3",
+    "babel-plugin-minify-simplify": "^0.4.3",
+    "babel-plugin-react": "^1.0.0",
+    "babel-plugin-react-native-web": "^0.7.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-constant-elements": "^6.23.0",
+    "babel-plugin-transform-react-display-name": "^6.25.0",
+    "babel-plugin-transform-react-inline-elements": "^6.22.0",
+    "babel-plugin-transform-react-jsx-self": "^6.22.0",
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
+    "babel-plugin-universal-import": "^2.0.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
+    "babel-register": "^6.26.0",
+    "chokidar": "^2.0.3",
     "cross-env": "^5.1.6",
+    "error-overlay-webpack-plugin": "^0.1.5",
     "flow-bin": "^0.73.0",
     "flow-typed": "^2.4.0",
     "jest": "23.1.0",
+    "react-hot-loader": "^4.2.0",
     "react-test-renderer": "16.3.1",
-    "webpack": "^4.10.2",
-    "webpack-flush-chunks": "^1.2.3"
+    "redux-devtools-extension": "^2.13.2",
+    "rimraf": "^2.6.2",
+    "stats-webpack-plugin": "^0.6.2",
+    "uglifyjs-webpack-plugin": "^1.2.5",
+    "webpack": "3",
+    "webpack-dev-middleware": "^2.0.6",
+    "webpack-flush-chunks": "^1.2.3",
+    "webpack-hot-middleware": "^2.22.2",
+    "webpack-hot-server-middleware": "^0.5.0",
+    "write-file-webpack-plugin": "^4.3.2"
   }
 }
