--- a/indocal-client/package.json
+++ b/indocal-client/package.json
@@ -7,26 +7,35 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "postinstall": "yarn flow-typed-install",
+    "postinstall": "yarn flow-typed-install && yarn __PATCH_RNW_DANGEROUSLY",
     "develop": "yarn develop:web",
     "develop:web": "yarn start",
     "develop:rn": "yarn develop:rn:android",
     "develop:rn:android": "react-native run-android",
     "develop:rn:ios": "react-native run-ios",
-    "build:web": "BABEL_ENV=web:prod echo \"Not defined yet\"",
+    "build:web": "yarn build:web:client && yarn build:web:server && yarn build:web:node",
+    "build:web:client": "cross-env BABEL_ENV=web:prod NODE_ENV=production webpack --progress -p --config scripts/webpack.client.js",
+    "build:web:server": "cross-env BABEL_ENV=web:prod NODE_ENV=production webpack --progress -p --config scripts/webpack.server.js",
+    "build:web:node": "cross-env BABEL_ENV=web:prod NODE_ENV=production babel src -d dist",
     "build:rn": "yarn build:rn:android",
     "build:rn:bundle": "yarn build:rn:bundle:android",
     "build:rn:bundle:android": "react-native bundle --platform android --entry-file index.js --bundle-output dist/android.bundle.js --sourcemap-output dist/android.bundle.map --reset-cache",
     "build:rn:bundle:ios": "react-native bundle --platform ios --entry-file index.js --bundle-output dist/ios.bundle.js --sourcemap-output dist/ios.bundle.map --reset-cache",
     "build:rn:android": "echo \"Not defined yet\"",
     "build:rn:ios": "echo \"Not defined yet\"",
+    "prestart": "yarn prebuild",
     "start": "cross-env BABEL_ENV=web:dev node server.js",
+    "prebuild": "node scripts/deleteBuilds.js",
     "build": "yarn build:web",
     "flow": "flow",
-    "flow-typed-install": "flow-typed install -s -o --ignoreDeps peer dev"
+    "flow-typed-install": "flow-typed install -s -o --ignoreDeps peer dev",
+    "__PATCH_RNW_DANGEROUSLY": "echo \"THIS WILL PATCH react-native-web PACKAGE DANGEROUSLY.\n\" && patch -N ./node_modules/react-native-web/dist/exports/createElement/index.js < ./__HACKS/react-native-web-ResponderEventInjection.patch || :"
   },
   "dependencies": {
     "apollo-client": "^2.3.2",
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
     "dotenv-loader": "^2.0.1",
     "express": "^4.16.3",
@@ -45,7 +54,8 @@
     "react-universal-component": "^2.9.0",
     "redux": "^4.0.0",
     "redux-first-router": "^0.0.16-next",
-    "redux-first-router-link": "^1.4.2"
+    "redux-first-router-link": "^1.4.2",
+    "stats-webpack-plugin": "^0.6.2"
   },
   "devDependencies": {
     "autodll-webpack-plugin": "^0.3.9",
@@ -65,14 +75,15 @@
     "babel-plugin-transform-react-jsx-self": "^6.22.0",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "babel-plugin-universal-import": "^2.0.0",
-    "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-native": "4.0.0",
     "babel-register": "^6.26.0",
     "chokidar": "^2.0.3",
     "cross-env": "^5.1.6",
+    "css-loader": "^0.28.11",
     "error-overlay-webpack-plugin": "^0.1.5",
+    "extract-css-chunks-webpack-plugin": "^2.0.19",
     "flow-bin": "^0.73.0",
     "flow-typed": "^2.4.0",
     "jest": "23.1.0",
@@ -80,7 +91,6 @@
     "react-test-renderer": "16.3.1",
     "redux-devtools-extension": "^2.13.2",
     "rimraf": "^2.6.2",
-    "stats-webpack-plugin": "^0.6.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack": "3",
     "webpack-dev-middleware": "^2.0.6",
