Client build optimization * disable react-specific optimization for now * enable some babel minifier transforms * deliver gzipped assets

--- a/indocal-client/package.json
+++ b/indocal-client/package.json
@@ -37,6 +37,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "body-parser": "^1.18.3",
+    "connect-gzip-static": "^2.1.1",
     "dotenv-loader": "^2.0.1",
     "express": "^4.16.3",
     "express-no-favicons": "^0.0.1",
@@ -68,6 +69,8 @@
     "babel-plugin-react": "^1.0.0",
     "babel-plugin-react-native-web": "^0.7.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-minify-booleans": "^6.9.4",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
     "babel-plugin-transform-react-display-name": "^6.25.0",
@@ -80,6 +83,7 @@
     "babel-preset-react-native": "4.0.0",
     "babel-register": "^6.26.0",
     "chokidar": "^2.0.3",
+    "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
     "error-overlay-webpack-plugin": "^0.1.5",
