--- a/indocal-client/.babelrc
+++ b/indocal-client/.babelrc
@@ -7,6 +7,8 @@
         "react-hot-loader/babel",
         "universal-import",
         "react-native-web",
+        "transform-minify-booleans",
+        "transform-node-env-inline",
         "transform-react-jsx-source",
         "transform-react-jsx-self"
       ],
@@ -27,6 +29,7 @@
         "universal-import",
         "react-native-web",
         "transform-react-display-name",
+        "transform-node-env-inline",
         "minify-simplify",
         [
           "minify-dead-code-elimination",
